NOJIRA fix permgen error during unit test execution
git-svn-id: https://source.jasig.org/uPortal/trunk@24305 f5dbab47-78f9-eb45-b975-e544023573eb